# chesstack

./: CMakeLists.txt  README.md  play.py  requirements.txt  rule.md  test_positions.py  update_piece_manual.md
chess_python/: chess_python.cpp
example/: main.cpp
playground/: chess_mutated.cpp
scripts/: build_windows.bat  build_windows.ps1
src/: chess.hpp  enum.hpp  gameboard.cpp  gameboard.hpp  move.cpp  moves.hpp  pgn.cpp  piece.cpp  piece.hpp
test/: test_pgn.cpp  test_play.cpp
